feat(pom): update
升级版本至2.2.0